<resources>
    <string name="app_name">Calculator</string>
    <string name="text_answer">Ответ: %s</string>
    <string name="pow">^</string>
    <string name="sin">SIN</string>
    <string name="cos">COS</string>
    <string name="fedulova_polina_303">Fedulova Polina 303</string>
    <string name="tan">TAN</string>
    <string name="sqrt">Sqrt</string>
    <string name="a_number">A</string>
    <string name="minus">-</string>
    <string name="b_number">B</string>
    <string name="multi">*</string>
    <string name="plus">+</string>
    <string name="divide">/</string>
    <string name="divide_by_zero">Делить на 0 нельзя</string>
    <string name="minus_sqrt">Нельзя извлечь корень из отрицательного числа</string>

</resources>