<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_FP303"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/fedulova_polina_303"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextCountMath"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:digits="1234567890.-"
        android:hint="Число для нижних операций"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlus" />

    <Button
        android:id="@+id/buttonSIN"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="4dp"
        android:text="@string/sin"
        app:layout_constraintEnd_toStartOf="@id/buttonCOS"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCountMath" />

    <Button
        android:id="@+id/buttonCOS"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/cos"
        app:layout_constraintEnd_toStartOf="@id/buttonTAN"
        app:layout_constraintStart_toEndOf="@id/buttonSIN"
        app:layout_constraintTop_toBottomOf="@+id/editTextCountMath" />
    <Button
        android:id="@+id/buttonTAN"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/tan"
        app:layout_constraintEnd_toStartOf="@+id/buttonSqrt"
        app:layout_constraintStart_toEndOf="@id/buttonCOS"
        app:layout_constraintTop_toBottomOf="@+id/editTextCountMath" />

    <Button
        android:id="@+id/buttonSqrt"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:text="@string/sqrt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonTAN"
        app:layout_constraintTop_toBottomOf="@+id/editTextCountMath" />

    <EditText
        android:id="@+id/editTextA"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:digits="1234567890.-"
        android:hint="@string/a_number"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/minus"
        app:layout_constraintEnd_toStartOf="@id/buttonMulti"
        app:layout_constraintStart_toEndOf="@id/buttonPlus"
        app:layout_constraintTop_toBottomOf="@+id/editTextB" />

    <EditText
        android:id="@+id/editTextB"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:digits="1234567890.-"
        android:hint="@string/b_number"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextA" />

    <Button
        android:id="@+id/buttonMulti"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/multi"
        app:layout_constraintEnd_toStartOf="@id/buttonDivide"
        app:layout_constraintStart_toEndOf="@id/buttonMinus"
        app:layout_constraintTop_toBottomOf="@+id/editTextB" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/plus"
        app:layout_constraintEnd_toStartOf="@id/buttonMinus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextB" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/divide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonMulti"
        app:layout_constraintTop_toBottomOf="@+id/editTextB" />

    <EditText
        android:id="@+id/editText_countPow"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="392dp"
        android:digits="1234567890.-"
        android:hint="Какое число возводить в степень"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_PowIn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:digits="1234567890.-"
        android:hint="В какую степень возводить"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_countPow" />

    <Button
        android:id="@+id/buttonPow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_PowIn" />

    <TextView
        android:id="@+id/textViewAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="44dp"
        android:text="@string/text_answer"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPow" />


</androidx.constraintlayout.widget.ConstraintLayout>